--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
         android:label="qr_reader"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+             android:value="AIzaSyB95OWJI5AU955fobCqCIm2IlUuhOAGuKw"/>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
